OPIK-3647 code style